--- a/src/client/app/shared/navbar/navbar.component.html
+++ b/src/client/app/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav>
   <a [routerLink]="['/']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Search</a>
+  <a [routerLink]="['/articles']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Articles</a>
   <a [routerLink]="['/about']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Agents</a>
 </nav>
