--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -20,6 +20,6 @@
 <!--<textarea [froalaEditor] formControlName="formModel"></textarea>-->
 <!--<button type="submit">Submit</button>-->
 <!--</form>-->
-<div [froalaEditor] [(froalaModel)]="editorContent"></div>
+<!--<div [froalaEditor] [(froalaModel)]="editorContent"></div>
 <div [froalaView]="editorContent"></div>
-<button (click)="bbbb()">Submit</button>
+<button (click)="bbbb()">Submit</button>-->
