--- a/src/client/app/shared/navbar/navbar.component.html
+++ b/src/client/app/shared/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav>
   <a [routerLink]="['/']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Search</a>
   <a [routerLink]="['/articles']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Articles</a>
+<!--  <a [routerLink]="['/article-info/58ebd119c8318f3a1885488e']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Article Info</a>
+-->
   <a [routerLink]="['/about']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">Agents</a>
 </nav>
