--- a/src/client/app/articles/articles.component.html
+++ b/src/client/app/articles/articles.component.html
@@ -1,4 +1,8 @@
 <div style="margin: auto; max-width: 1000px; margin-bottom: 50px;">
+
+  <br><br>
+  <button (click)="goToCreate()">Create Article</button>
+  <br><br>
   <data-table id="persons-grid"
               headerTitle="Articles"
               [items]="items"
