--- a/src/client/app/articles/article-info.component.html
+++ b/src/client/app/articles/article-info.component.html
@@ -21,28 +21,33 @@
 
           <hr>
           <div class="form-group">
-            <label for="titleTextarea" class="label-for-info">Code</label>
+            <label for="titleTextarea" class="label-for-info">Code :</label>
             <input type="text" class="form-control" name="code" id="code" placeholder="code" [(ngModel)] ="selected_article.articleId"required/>
           </div>
 
           <div class="form-group">
-            <label for="titleTextarea" class="label-for-info">Title</label>
+            <label for="active" class="label-for-info">Active :</label>
+            <input type="checkbox" class="form-control" name="active" id="active"  [(ngModel)] ="selected_article.active"/>
+          </div>
+
+          <div class="form-group">
+            <label for="titleTextarea" class="label-for-info">Title :</label>
             <textarea class="form-control" id="titleTextarea" name="titleTextarea" rows="3" placeholder="Enter Title" [(ngModel)] ="selected_article.title"></textarea>
           </div>
 
           <div class="form-group">
-            <label for="subtitleTextarea" class="label-for-info">Sub Title</label>
+            <label for="subtitleTextarea" class="label-for-info">Sub Title :</label>
             <textarea class="form-control"  name="subtitleTextarea" id="subtitleTextarea" rows="3" placeholder="Enter Sub Title" [(ngModel)] ="selected_article.subTitle"></textarea>
           </div>
 
           <div class="form-group">
-            <label for="content-editor" class="label-for-info">Article's Content</label>
+            <label for="content-editor" class="label-for-info">Article's Content :</label>
             <div [froalaEditor] [(froalaModel)]="selected_article.content" name="content-editor" id="content-editor"></div>
           </div>
 <hr>
           <div class="form-group">
-            <label for="content-view" class="label-for-info">Content View</label>
-            <div [froalaView]="selected_article.content" name="content-view" id="content-view"></div>
+            <label for="content-view" class="label-for-info">Content View :</label>
+            <div [froalaView]="selected_article.content" name="content-view" id="content-view" class="content-view-form"></div>
           </div>
 
           <div class="w3-bar">
